# maml

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  CITATION.cff  MANIFEST.in  Makefile  README.md  README.rst  pre-commit  pylintrc  pyproject.toml  requirements-ci.txt  requirements-dl.txt  requirements-optional.txt  requirements-tf.txt  requirements.txt  setup.cfg  setup.py  tasks.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: lint.yml  linting.yml  release.yml  test.yml  testing.yml
api-docs/: genindex.html  index.html  maml.apps.html  maml.apps.pes._base.html  maml.apps.pes._gap.html  maml.apps.pes._mtp.html  maml.apps.pes._nnp.html  maml.apps.pes._snap.html  maml.apps.pes.html  maml.apps.pes.lammps._calcs.html  maml.apps.pes.lammps.html  maml.base._data.html  maml.base._describer.html  maml.base._model.html  maml.base.html  maml.data._mp.html  maml.data._url.html  maml.data.html  maml.database._data_classes.html  maml.database.db.html  maml.database.html  maml.describer._composition.html  maml.describer._site.html  maml.describer._spectrum.html  maml.describer._structure.html  maml.describer.html  maml.html  maml.model._neural_network.html  maml.model.html  maml.utils._data_conversion.html  maml.utils._data_selection.html  maml.utils._general.html  maml.utils._value_profile.html  maml.utils.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
api-docs-source/: changelog.rst  conf.py  index.rst  maml.apps.bowsr.acquisition.rst  maml.apps.bowsr.model.base.rst  maml.apps.bowsr.model.cgcnn.rst  maml.apps.bowsr.model.megnet.rst  maml.apps.bowsr.model.rst  maml.apps.bowsr.optimizer.rst  maml.apps.bowsr.perturbation.rst  maml.apps.bowsr.rst  maml.apps.bowsr.target_space.rst  maml.apps.gbe.rst  maml.apps.gbe.utils.rst  maml.apps.pes._gap.rst  maml.apps.pes._mtp.rst  maml.apps.pes.lammps._calcs.rst  maml.apps.pes.lammps.rst  maml.apps.pes.rst  maml.apps.rfxas.rst  maml.apps.rst  maml.apps.symbolic.rst  maml.base._describer.rst  maml.base._model.rst  maml.base.rst  maml.data._mp.rst  maml.data.rst  maml.describer._site.rst  maml.describer.matminer.rst  maml.describer.megnet.rst  maml.describers.megnet.rst  maml.describers.rdf.rst  maml.model._neural_network.rst  maml.model.rst  maml.models.dl.rst  maml.rst  maml.utils._data_conversion.rst  maml.utils._general.rst  maml.utils._value_profile.rst  maml.utils.rst  (+1 more)
api-docs/.doctrees/: environment.pickle  index.doctree  maml.apps.doctree  maml.apps.pes._base.doctree  maml.apps.pes._gap.doctree  maml.apps.pes._mtp.doctree  maml.apps.pes._nnp.doctree  maml.apps.pes._snap.doctree  maml.apps.pes.doctree  maml.apps.pes.lammps._calcs.doctree  maml.apps.pes.lammps.doctree  maml.base._data.doctree  maml.base._describer.doctree  maml.base._model.doctree  maml.base.doctree  maml.data._mp.doctree  maml.data._url.doctree  maml.data.doctree  maml.database._data_classes.doctree  maml.database.doctree  maml.describer._composition.doctree  maml.describer._site.doctree  maml.describer._spectrum.doctree  maml.describer._structure.doctree  maml.describer.doctree  maml.doctree  maml.model._neural_network.doctree  maml.model.doctree  maml.utils._data_conversion.doctree  maml.utils._data_selection.doctree  maml.utils._general.doctree  maml.utils._value_profile.doctree  maml.utils.doctree  modules.doctree
api-docs/_sources/: maml.apps.pes._base.rst.txt  maml.apps.pes._nnp.rst.txt  maml.apps.pes._snap.rst.txt  maml.apps.pes.rst.txt  maml.apps.rst.txt  maml.base._data.rst.txt  maml.data._url.rst.txt  maml.data.rst.txt  maml.database._data_classes.rst.txt  maml.database.db.rst.txt  maml.database.rst.txt  maml.describer._composition.rst.txt  maml.describer._spectrum.rst.txt  maml.describer._structure.rst.txt  maml.describer.rst.txt  maml.model.rst.txt  maml.utils._data_selection.rst.txt  maml.utils.rst.txt
api-docs/_static/: documentation_options.js
docs/: .buildinfo  CNAME  README.md  _config.yml  changelog.html  conf.py  genindex.html  index.html  index.md  maml.apps.bowsr.acquisition.html  maml.apps.bowsr.html  maml.apps.bowsr.md  maml.apps.bowsr.model.base.html  maml.apps.bowsr.model.cgcnn.html  maml.apps.bowsr.model.dft.html  maml.apps.bowsr.model.html  maml.apps.bowsr.model.md  maml.apps.bowsr.model.megnet.html  maml.apps.bowsr.optimizer.html  maml.apps.bowsr.perturbation.html  maml.apps.bowsr.preprocessing.html  maml.apps.bowsr.target_space.html  maml.apps.gbe.describer.html  maml.apps.gbe.html  maml.apps.gbe.md  maml.apps.gbe.presetfeatures.html  maml.apps.gbe.utils.html  maml.apps.html  maml.apps.md  maml.apps.pes.html  maml.apps.pes.lammps.html  maml.apps.pes.md  maml.apps.rfxas.html  maml.apps.structure_prediction.html  maml.apps.symbolic.html  maml.apps.symbolic.md  maml.base.html  maml.base.md  maml.data.html  maml.data.md  (+26 more)
docs/.doctrees/: environment.pickle  index.doctree  maml.apps.pes.doctree  maml.apps.pes.lammps.doctree  maml.base.doctree  maml.data.doctree  maml.database.db.doctree  maml.database.doctree  maml.describer.doctree  maml.utils.doctree
docs/_includes/: footer_custom.html  nav_footer_custom.html
docs/_sources/: index.rst.txt  maml.apps.bowsr.model.dft.rst.txt  maml.apps.bowsr.preprocessing.rst.txt  maml.apps.gbe.describer.rst.txt  maml.apps.gbe.presetfeatures.rst.txt  maml.apps.pes.rst.txt  maml.apps.rst.txt  maml.apps.structure_prediction.rst.txt  maml.base.rst.txt  maml.database.rst.txt  maml.describer.rdf.rst.txt  maml.describer.rst.txt  maml.describers.matminer_wrapper.rst.txt  maml.describers.rst.txt  maml.model.rst.txt  maml.models.rst.txt  maml.rst.txt  maml.utils.rst.txt  modules.rst.txt
docs/_static/: documentation_options.js  jquery-3.4.1.js
examples/: site_describer.ipynb
maml/: __init__.py  data.py  kernel.py  metrics.py
maml/apps/: __init__.py
maml/base/: __init__.py  _data.py  _describer.py  _feature_batch.py  _mixin.py  _model.py  _util.py  data.py  describer.py  model.py  util.py
maml/data/: __init__.py  _mp.py  _url.py  mp.py  url.py
maml/database/: __init__.py  _data_classes.py  _db.py  db.py
maml/db_config/: db.json
(+759 files in other folders)
